--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -56,3 +56,25 @@ h4 {
   border-top-left-radius: 10px !important;
   border-top-right-radius: 10px !important;
 }
+
+#presentation {
+  transition: all 0.45s;
+  background: #2c3e50;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3498db, #2c3e50);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3498db, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  padding: 12px 0 36px !important;
+}
+
+#presentation h1,
+#presentation p {
+  color: #fff;
+  text-shadow: 1px 2px 3px #333;                                                                                                                                                                                                                                                                                                                                                              
+}
+
+#presentation h1::before {
+  content: '';
+  display: block;
+  height: 128px;
+  margin-bottom: 15px;
+  background: url(../media/light-logo.png) no-repeat center;
+}
