--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -68,11 +68,19 @@ h1 {
 #presentation h1,
 #presentation p {
   color: #fff;
-  text-shadow: 1px 2px 3px #333;                                                                                                                                                                                                                                                                                                                                                              
+  text-shadow: 1px 2px 3px #333;
 }
 
-#presentation p {
-  margin-bottom: 33px !important;
+.text-shadow-dark {
+  text-shadow: 1px 2px 3px #333 !important;
+}
+
+.text-shadow-light {
+  text-shadow: 1px 2px 3px #c9c9c9 !important;
+}
+
+.text-shadow-red {
+  text-shadow: 1px 2px 3px red !important;
 }
 
 #presentation h1::before {
@@ -93,3 +101,95 @@ h1 {
   padding: 0; 
   margin: 0;
 }
+
+
+.bg-app {
+  background: #3D7EAA;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFE47A, #3D7EAA);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFE47A, #3D7EAA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  background: #757F9A;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #D7DDE8, #757F9A);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #D7DDE8, #757F9A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  background: #1FA2FF;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  /* yellow, this is great */
+  background: #CAC531;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #F3F9A7, #CAC531);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #F3F9A7, #CAC531); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  background: #2980B9;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  background: #C6FFDD;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  background: #CC95C0;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
+  
+  .bg-tr-gradient-up {
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    color: #fff !important;
+  }
+  
+  .bg-tr-gradient-down {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    color: #fff !important;
+  }
+  
+  .bg-tr {
+    /* Fallback for web browsers that doesn't support RGBa */
+    background-color: rgb(0, 0, 0) transparent !important;
+    /* RGBa with 0.6 opacity */
+    background-color: rgba(0, 0, 0, 0.42) !important;
+    /* For IE 5.5 - 7*/
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000, endColorstr=#33000000) !important;
+    /* For IE 8*/
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000, endColorstr=#33000000)" !important;
+  }
+
+  .bg-tr-light {
+    /* Fallback for web browsers that doesn't support RGBa */
+    background-color: rgb(0, 0, 0) transparent !important;
+    /* RGBa with 0.6 opacity */
+    background-color: rgba(0, 0, 0, 0.10) !important;
+    /* For IE 5.5 - 7*/
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000) !important;
+    /* For IE 8*/
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)" !important;
+  }
+  
+  .box-shadow {
+    -moz-box-shadow:    1px 1px 3px 1px #333 !important;
+    -webkit-box-shadow: 1px 1px 3px 1px #333 !important;
+            box-shadow: 1px 1px 3px 1px #333 !important;
+  }
+  
+  .box-shadow-right {
+    -webkit-box-shadow: 3px 1px 9px -2px #333;
+    -moz-box-shadow: 3px 1px 9px -2px #333;
+    box-shadow: 3px 1px 9px -2px #333;
+  }
+
+  .btn {
+    -moz-box-shadow:    1px 1px 3px 1px #333 !important;
+    -webkit-box-shadow: 1px 1px 3px 1px #333 !important;
+            box-shadow: 1px 1px 3px 1px #333 !important;
+  }
+  
+  .bg-dark {
+    background-color: #333;
+  }
+
+  .circle {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+  }
