--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -148,7 +148,8 @@ h1 {
     color: #fff !important;
   }
   
-  .bg-tr {
+  .bg-tr,
+  #wrapper {
     /* Fallback for web browsers that doesn't support RGBa */
     background-color: rgb(0, 0, 0) transparent !important;
     /* RGBa with 0.6 opacity */
