--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,3 +1,50 @@
+body {
+	width: 100wh;
+	height: 90vh;
+	color: #fff;
+	background: linear-gradient(-45deg, #9da0aa, #555, #9da0aa, #333);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
 h1 {
   margin: 27px auto 21px;
 }
@@ -60,9 +107,10 @@ h1 {
 #presentation {
   transition: all 0.45s;
   background: #2c3e50;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #3498db, #2c3e50);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #3498db, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #333, #999);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #333, #999); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 12px 0 36px !important;
+  box-shadow: 0 3px 3px #111;
 }
 
 #presentation h1,
@@ -184,10 +232,19 @@ h1 {
   }
 
   .btn {
+    transition: box-shadow 333ms ease,
+      -webkit-box-shadow 333ms ease,
+      -moz-box-shadow 333 ease;
     margin: auto 3px;
-    -moz-box-shadow:    1px 1px 3px 1px #333 !important;
-    -webkit-box-shadow: 1px 1px 3px 1px #333 !important;
-            box-shadow: 1px 1px 3px 1px #333 !important;
+    -moz-box-shadow:    1px 1px 3px 1px #222 !important;
+    -webkit-box-shadow: 1px 1px 3px 1px #222 !important;
+            box-shadow: 1px 1px 3px 1px #222 !important;
+  }
+
+  .btn:hover {
+    -moz-box-shadow:    0px 1px 2px #111 !important;
+    -webkit-box-shadow: 0px 1px 2px #111 !important;
+            box-shadow: 0px 1px 2px #111 !important;
   }
   
   .bg-dark {
@@ -198,6 +255,10 @@ h1 {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
+  }
+
+  .card {
+    border: none;
   }
 
   .text-dark {color: #222 !important;}
