--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,13 +1,24 @@
 body {
-	width: 100wh;
-	height: 90vh;
-	color: #fff;
-	background: linear-gradient(-45deg, #738cdd, #4e86b4, #5d7990, #cfc4f6);
+  width: 100wh;
+  height: 90vh;
+  color: #fff;
+  background: #4c5863; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #4c5863,
+    #292c2e
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #4c5863,
+    #292c2e
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   background-size: 400% 400%;
-  
-	-webkit-animation: Gradient 15s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-	animation: Gradient 15s ease infinite;
+
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
 }
 
 .text-shadow {
@@ -15,39 +26,39 @@ body {
 }
 
 @-webkit-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @-moz-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 h1 {
@@ -70,7 +81,11 @@ h1 {
 }
 
 .gradient-bottom {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 .radius-12 {
@@ -140,7 +155,7 @@ h1 {
 }
 
 #presentation h1::before {
-  content: '';
+  content: "";
   display: block;
   height: 128px;
   margin-bottom: 15px;
@@ -154,119 +169,193 @@ h1 {
 }
 
 .row {
-  padding: 0; 
+  padding: 0;
   margin: 0;
 }
 
-
 .bg-app {
-  background: #3D7EAA;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFE47A, #3D7EAA);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFE47A, #3D7EAA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  background: #757F9A;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #D7DDE8, #757F9A);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #D7DDE8, #757F9A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  background: #1FA2FF;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  background: #3d7eaa; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffe47a,
+    #3d7eaa
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffe47a,
+    #3d7eaa
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  background: #757f9a; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #d7dde8,
+    #757f9a
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #d7dde8,
+    #757f9a
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  background: #1fa2ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #a6ffcb,
+    #12d8fa,
+    #1fa2ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #a6ffcb,
+    #12d8fa,
+    #1fa2ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   /* yellow, this is great */
-  background: #CAC531;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #F3F9A7, #CAC531);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #F3F9A7, #CAC531); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  background: #2980B9;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  background: #C6FFDD;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  background: #CC95C0;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  }
-  
-  .bg-tr-gradient-up {
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-    color: #fff !important;
-  }
-  
-  .bg-tr-gradient-down {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-    color: #fff !important;
-  }
-  
-  .bg-tr,
-  #wrapper {
-    /* Fallback for web browsers that doesn't support RGBa */
-    background-color: rgb(0, 0, 0) transparent !important;
-    /* RGBa with 0.6 opacity */
-    background-color: rgba(0, 0, 0, 0.42) !important;
-    /* For IE 5.5 - 7*/
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000, endColorstr=#33000000) !important;
-    /* For IE 8*/
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000, endColorstr=#33000000)" !important;
-  }
+  background: #cac531; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #f3f9a7,
+    #cac531
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #f3f9a7,
+    #cac531
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-  .bg-tr-light {
-    /* Fallback for web browsers that doesn't support RGBa */
-    background-color: rgb(0, 0, 0) transparent !important;
-    /* RGBa with 0.6 opacity */
-    background-color: rgba(0, 0, 0, 0.10) !important;
-    /* For IE 5.5 - 7*/
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000) !important;
-    /* For IE 8*/
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)" !important;
-  }
-  
-  .box-shadow {
-    -moz-box-shadow:    1px 1px 3px 1px #333 !important;
-    -webkit-box-shadow: 1px 1px 3px 1px #333 !important;
-            box-shadow: 1px 1px 3px 1px #333 !important;
-  }
-  
-  .box-shadow-right {
-    -webkit-box-shadow: 3px 1px 9px -2px #333;
-    -moz-box-shadow: 3px 1px 9px -2px #333;
-    box-shadow: 3px 1px 9px -2px #333;
-  }
+  background: #2980b9; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffffff,
+    #6dd5fa,
+    #2980b9
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffffff,
+    #6dd5fa,
+    #2980b9
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-  .btn {
-    transition: box-shadow 333ms ease,
-      -webkit-box-shadow 333ms ease,
-      -moz-box-shadow 333 ease;
-    margin: auto 3px;
-    -moz-box-shadow:    1px 1px 3px 1px #222 !important;
-    -webkit-box-shadow: 1px 1px 3px 1px #222 !important;
-            box-shadow: 1px 1px 3px 1px #222 !important;
-  }
+  background: #c6ffdd; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #f7797d,
+    #fbd786,
+    #c6ffdd
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #f7797d,
+    #fbd786,
+    #c6ffdd
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-  .btn:hover {
-    -moz-box-shadow:    0px 1px 2px #111 !important;
-    -webkit-box-shadow: 0px 1px 2px #111 !important;
-            box-shadow: 0px 1px 2px #111 !important;
-  }
-  
-  .bg-dark {
-    background-color: #333;
-  }
+  background: #cc95c0; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #7aa1d2,
+    #dbd4b4,
+    #cc95c0
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #7aa1d2,
+    #dbd4b4,
+    #cc95c0
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
-  .circle {
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-  }
+.bg-tr-gradient-up {
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  color: #fff !important;
+}
 
-  .card {
-    border: none;
-  }
+.bg-tr-gradient-down {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0)
+  );
+  color: #fff !important;
+}
 
-  .text-dark {color: #222 !important;}
-  .text-dark * {color: #222 !important;}
+.bg-tr,
+#wrapper {
+  /* Fallback for web browsers that doesn't support RGBa */
+  background-color: rgb(0, 0, 0) transparent !important;
+  /* RGBa with 0.6 opacity */
+  background-color: rgba(0, 0, 0, 0.42) !important;
+  /* For IE 5.5 - 7*/
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000, endColorstr=#33000000) !important;
+  /* For IE 8*/
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000, endColorstr=#33000000)" !important;
+}
 
-  .text-light {color: #f9f9f9 !important;}
-  .text-light * {color: #f9f9f9 !important;}
+.bg-tr-light {
+  /* Fallback for web browsers that doesn't support RGBa */
+  background-color: rgb(0, 0, 0) transparent !important;
+  /* RGBa with 0.6 opacity */
+  background-color: rgba(0, 0, 0, 0.1) !important;
+  /* For IE 5.5 - 7*/
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000) !important;
+  /* For IE 8*/
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)" !important;
+}
+
+.box-shadow {
+  -moz-box-shadow: 1px 1px 3px 1px #333 !important;
+  -webkit-box-shadow: 1px 1px 3px 1px #333 !important;
+  box-shadow: 1px 1px 3px 1px #333 !important;
+}
+
+.box-shadow-right {
+  -webkit-box-shadow: 3px 1px 9px -2px #333;
+  -moz-box-shadow: 3px 1px 9px -2px #333;
+  box-shadow: 3px 1px 9px -2px #333;
+}
+
+.btn {
+  transition: box-shadow 333ms ease, -webkit-box-shadow 333ms ease,
+    -moz-box-shadow 333 ease;
+  margin: auto 3px;
+  -moz-box-shadow: 1px 1px 3px 1px #222 !important;
+  -webkit-box-shadow: 1px 1px 3px 1px #222 !important;
+  box-shadow: 1px 1px 3px 1px #222 !important;
+}
+
+.btn:hover {
+  -moz-box-shadow: 0px 1px 2px #111 !important;
+  -webkit-box-shadow: 0px 1px 2px #111 !important;
+  box-shadow: 0px 1px 2px #111 !important;
+}
+
+.bg-dark {
+  background-color: #333;
+}
+
+.circle {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+
+.card {
+  border: none;
+}
+
+.text-dark {
+  color: #222 !important;
+}
+.text-dark * {
+  color: #222 !important;
+}
+
+.text-light {
+  color: #f9f9f9 !important;
+}
+.text-light * {
+  color: #f9f9f9 !important;
+}
